--- a/result.ipynb
+++ b/result.ipynb
@@ -68,7 +68,8 @@
     "\n",
     "    def __init__(self, data_queue, master=None):\n",
     "        QtWidgets.QMainWindow.__init__(self, master)\n",
-    "        self.setGeometry(0, 0, 450, 450)\n",
+    "        self.setGeometry(0, 0, 1280, 760)\n",
+    "        self.setWindowFlag(QtCore.Qt.windowStaysOnTopHint)\n",
     "        self.setWindowTitle(\"Mini Player\")\n",
     "        self.statusbar = self.statusBar()\n",
     "        self.statusbar.showMessage(\"Ready\")\n",
