window error w -> W, delete setgeometry

--- a/result.ipynb
+++ b/result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3c744ded",
    "metadata": {},
    "outputs": [
@@ -13,14 +13,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\YounghyunKim\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3468: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -68,8 +60,8 @@
     "\n",
     "    def __init__(self, data_queue, master=None):\n",
     "        QtWidgets.QMainWindow.__init__(self, master)\n",
-    "        self.setGeometry(0, 0, 1280, 760)\n",
-    "        self.setWindowFlag(QtCore.Qt.windowStaysOnTopHint)\n",
+    "        #self.setGeometry(0, 0, 1280, 760)\n",
+    "        self.setWindowFlag(QtCore.Qt.WindowStaysOnTopHint)\n",
     "        self.setWindowTitle(\"Mini Player\")\n",
     "        self.statusbar = self.statusBar()\n",
     "        self.statusbar.showMessage(\"Ready\")\n",
@@ -140,7 +132,6 @@
     "            self.mediaplayer.set_nsobject(int(self.videoframe.winId()))\n",
     "\n",
     "        # Start playing the video as soon as it loads\n",
-    "        self.mediaplayer.set_rate(4)\n",
     "        self.mediaplayer.play()\n",
     "\n",
     "    def update_ui(self):\n",
@@ -189,9 +180,10 @@
     "\n",
     "    player = MiniPlayer(data_queue)\n",
     "    player.show()\n",
-    "    #player.resize(480, 480)\n",
+    "    player.resize(480, 480)\n",
     "\n",
     "    #_ = Client(\"localhost\", 10000, data_queue)\n",
+    "\n",
     "    sys.exit(app.exec_())\n",
     "\n",
     "\n",
