--- a/result.ipynb
+++ b/result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3c744ded",
    "metadata": {},
    "outputs": [
@@ -13,6 +13,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rla61\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -51,7 +59,7 @@
     "\n",
     "from PyQt5 import QtWidgets, QtGui, QtCore\n",
     "import vlc\n",
-    "from network import Client\n",
+    "#from network import Client\n",
     "\n",
     "\n",
     "class MiniPlayer(QtWidgets.QMainWindow):\n",
@@ -60,7 +68,6 @@
     "\n",
     "    def __init__(self, data_queue, master=None):\n",
     "        QtWidgets.QMainWindow.__init__(self, master)\n",
-    "        #self.setGeometry(0, 0, 1280, 760)\n",
     "        self.setWindowFlag(QtCore.Qt.WindowStaysOnTopHint)\n",
     "        self.setWindowTitle(\"Mini Player\")\n",
     "        self.statusbar = self.statusBar()\n",
