--- a/result.ipynb
+++ b/result.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rla61\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3468: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -123,6 +123,9 @@
     "        self.mediaplayer.set_media(self.media)\n",
     "        # Parse the metadata of the file\n",
     "        self.media.parse()\n",
+    "        \n",
+    "        p = vlc.MediaPlayer(\"audio.webm\")\n",
+    "        p.play()\n",
     "\n",
     "        # Set the title of the track as the window title\n",
     "        self.setWindowTitle(\"{}\".format(self.media.get_meta(0)))\n",
