--- a/result.ipynb
+++ b/result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3c744ded",
    "metadata": {},
    "outputs": [
@@ -13,14 +13,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rla61\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -137,7 +129,6 @@
     "            self.mediaplayer.set_hwnd(int(self.videoframe.winId()))\n",
     "        elif platform.system() == \"Darwin\":  # for MacOS\n",
     "            self.mediaplayer.set_nsobject(int(self.videoframe.winId()))\n",
-    "\n",
     "        # Start playing the video as soon as it loads\n",
     "        self.mediaplayer.play()\n",
     "\n",
@@ -173,9 +164,11 @@
     "        mtime = QtCore.QTime(0, 0, 0, 0)\n",
     "        time = mtime.addMSecs(self.mediaplayer.get_time())\n",
     "        self.statusbar.showMessage(time.toString())\n",
-    "        \n",
-    "        if self.mediaplayer.get_position() >= 0.99:\n",
-    "            self.mediaplayer.set_position(0)\n",
+    "    \n",
+    "        if self.mediaplayer.get_state() == vlc.State(6):\n",
+    "            self.open_file()\n",
+    "        #if self.mediaplayer.get_position() >= 0.99:\n",
+    "           # self.mediaplayer.set_position(0)\n",
     "\n",
     "\n",
     "def main():\n",
@@ -202,6 +195,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "60f29aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c16e4d4b",
    "metadata": {},
    "outputs": [],
    "source": []
