--- a/result.ipynb
+++ b/result.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3c744ded",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#! /usr/bin/env python3\n",
     "#\n",
@@ -115,9 +105,6 @@
     "        self.mediaplayer.set_media(self.media)\n",
     "        # Parse the metadata of the file\n",
     "        self.media.parse()\n",
-    "        \n",
-    "        p = vlc.MediaPlayer(\"audio.webm\")\n",
-    "        p.play()\n",
     "\n",
     "        # Set the title of the track as the window title\n",
     "        self.setWindowTitle(\"{}\".format(self.media.get_meta(0)))\n",
@@ -137,7 +124,10 @@
     "\n",
     "    def update_ui(self):\n",
     "        self.update_statusbar()\n",
-    "\n",
+    "        \n",
+    "        if self.mediaplayer.get_state() == vlc.State(6):\n",
+    "            self.open_file()\n",
+    "            \n",
     "        try:\n",
     "            val = self.data_queue.get(block=False)\n",
     "        except queue.Empty:\n",
@@ -193,22 +183,6 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60f29aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c16e4d4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
